--- a/clone/service.html
+++ b/clone/service.html
@@ -6,14 +6,14 @@
     <!-- <base href="http://www.pawsxpress.com/" /> -->
     <meta name="description" content="Offers precious TLC pet services to Daytona Beach and Port Orange areas: catering pet transports, pet visits and special pet deliveries for workers, elderly and handicapped...working hard to keep pets, owners and pet businesses connected!" />
     <meta name="keywords" content="pet sitting, pet transports, pet services" />
-    <!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
-    <!-- <meta name="MobileOptimized" content="320"> -->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta http-equiv="cache-control" content="max-age=0" /> -->
-    <!-- <meta http-equiv="cache-control" content="no-cache" /> -->
-    <!-- <meta http-equiv="expires" content="0" /> -->
-    <!-- <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" /> -->
-    <!-- <meta http-equiv="pragma" content="no-cache" /> -->
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
@@ -67,13 +67,9 @@
                 <p>Paws Xpress comes to your pet!</p>
                 <p>*House sitting as well</p>
             </div>
-            <div class="collage">
-                <img src="./vet2.jpg" alt="dog doctor">
-                <img src="./chauffeur.jpg" alt=" dog in the car">
-                <img src="./medicine.jpg" alt="dog width medicine">
-            </div>
             <div class="description">
                 <div class="item">
+                    <img src="./vet2.jpg" alt="dog doctor">
                     <p>Destinations:</p>
                     <ul>
                         <li><i class="fa fa-check-square-o"></i>Veterinarians</li>
@@ -82,6 +78,7 @@
                     </ul>
                 </div>
                 <div class="item">
+                    <img src="./chauffeur.jpg" alt=" dog in the car">
                     <p>Transports:</p>
                     <ul>
                         <li><i class="fa fa-check-square-o"></i>Pet Chauffeur</li>
@@ -90,6 +87,7 @@
                     </ul>
                 </div>
                 <div class="item">
+                    <img src="./medicine.jpg" alt="dog width medicine">
                     <p>Special Deliveries:</p>
                     <ul>
                         <li><i class="fa fa-check-square-o"></i>Pet Medicine</li>
