--- a/clone/testimonial.html
+++ b/clone/testimonial.html
@@ -6,14 +6,14 @@
     <!-- <base href="http://www.pawsxpress.com/" /> -->
     <meta name="description" content="Offers precious TLC pet services to Daytona Beach and Port Orange areas: catering pet transports, pet visits and special pet deliveries for workers, elderly and handicapped...working hard to keep pets, owners and pet businesses connected!" />
     <meta name="keywords" content="pet sitting, pet transports, pet services" />
-    <!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
-    <!-- <meta name="MobileOptimized" content="320"> -->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta http-equiv="cache-control" content="max-age=0" /> -->
-    <!-- <meta http-equiv="cache-control" content="no-cache" /> -->
-    <!-- <meta http-equiv="expires" content="0" /> -->
-    <!-- <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" /> -->
-    <!-- <meta http-equiv="pragma" content="no-cache" /> -->
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
