--- a/clone/index.html
+++ b/clone/index.html
@@ -26,6 +26,9 @@
         <header class="header">
             <!-- menu -->
             <nav>
+                <div class="toggle">
+                    <span class="fa fa-bars"></span>
+                </div>
                 <ul>
                     <li><a class="nav_link" href="index.html" rel="noopener noreferrer">Home</a></li>
                     <li><a class="nav_link" href="service.html" rel="noopener noreferrer">Services</a></li>
@@ -46,6 +49,7 @@
         </header>
         <main>
             <div class="hero">
+                <img src="./header.jpg" alt="">
             </div>
             <section class="content">
                 <h1 class="title">Xpressing Your Pet's Needs!</h1>
