--- a/clone/index.html
+++ b/clone/index.html
@@ -29,7 +29,7 @@
                 <div class="toggle">
                     <span class="fa fa-bars"></span>
                 </div>
-                <ul>
+                <ul  data-js="menu-ul">
                     <li><a class="nav_link" href="index.html" rel="noopener noreferrer">Home</a></li>
                     <li><a class="nav_link" href="service.html" rel="noopener noreferrer">Services</a></li>
                     <li><a class="nav_link" href="testimonial.html" rel="noopener noreferrer">Testimonial</a></li>
@@ -87,6 +87,7 @@
 
             </div>
         </footer>
+        <script type="text/javascript" src="app.js"></script>
     </div>
 </body>
 
