--- a/clone/service.html
+++ b/clone/service.html
@@ -26,7 +26,10 @@
         <header class="header">
             <!-- menu -->
             <nav>
-                <ul>
+            	<div class="toggle">
+            	<span class="fa fa-bars"></span>
+            	</div>
+                <ul data-js="menu-ul">
                     <li><a class="nav_link" href="index.html" rel="noopener noreferrer">Home</a></li>
                     <li><a class="nav_link" href="service.html" rel="noopener noreferrer">Services</a></li>
                     <li><a class="nav_link" href="testimonial.html" rel="noopener noreferrer">Testimonial</a></li>
@@ -116,6 +119,7 @@
             </div>
         </footer>
     </div>
+    <script type="text/javascript"src="app.js"></script>
 </body>
 
 </html>
