change the btn menu background from #fff to a shadow

--- a/clone/contact.html
+++ b/clone/contact.html
@@ -48,9 +48,10 @@
             </div>
         </header>
         <main>
-            <h1 class="service_title">Contact</h1>
+            <h1 class="service_title">Contact / Request a Quote</h1>
             <div class="contact">
                 <div class="form">
+                    <div><i class="fa fa-envelope-o"></i> Contact Form </div>
                     <script type="text/javascript" src="https://form.jotform.com/jsform/82814258233154"></script>
                 </div>
                 <div class="contact_info">
